# dash

./: .gitignore  LICENSE  README.md  TODO.md  dash.cabal  experiment.ds  ideas.txt  io_test.ds  spot.cabal
examples/: fibonacci.ds  quicksort.ds  statemonad.ds
interpret-src/: Main.hs
profiling/: fibonacci.ds  recursion.ds  test1.ds
repl-src/: Main.hs
src/: Main.hs
src/Language/Dash/: API.hs  Constants.hs  Limits.hs
src/Language/Dash/Asm/: Assembler.hs  DataAssembler.hs
src/Language/Dash/BuiltIn/: BuiltInDefinitions.hs
src/Language/Dash/CodeGen/: BuiltInDefinitions.hs  BuiltInFunctions.hs  CodeGen.hs  CodeGenState.hs  Limits.hs
src/Language/Dash/Error/: Error.hs
src/Language/Dash/IR/: Ast.hs  Data.hs  Nst.hs  Opcode.hs  Tac.hs
src/Language/Dash/Internal/: Error.hs
src/Language/Dash/Normalization/: Normalization.hs  NormalizationState.hs  Recursion.hs
src/Language/Dash/Parser/: Lexer.x  Parser.y
src/Language/Dash/VM/: Bits.hs  DataEncoding.hs  Types.hs  VM.hs
src/Language/Spot/: API.hs  Ast.hs  Lexer.x  Parser.y
src/Language/Spot/Asm/: Assembler.hs  DataAssembler.hs
src/Language/Spot/CodeGen/: AstToAnf.hs  CodeGen.hs  CodeGen2.hs  CodeGenState.hs  Normalization.hs
src/Language/Spot/IR/: Anf.hs  Ast.hs  Data.hs  Norm.hs  Nst.hs  Opcode.hs  Tac.hs
src/Language/Spot/Normalization/: Normalization.hs  NormalizationState.hs  Recursion.hs
src/Language/Spot/Parser/: Ast.hs  Lexer.x  Parser.y
src/Language/Spot/VM/: Assembler.hs  Bits.hs  OpcodeAsm.hs  TacAsm.hs  Types.hs  VM.hs  VMBits.hs  VMRaw.hs
src/Parsing/: Lexer.x
test/: IntegrationSpec.hs  LexerSpec.hs  SpecMain.hs
test/Language/Dash/Normalization/: NormalizationSpec.hs
test/Language/Dash/Parser/: LexerSpec.hs  ParserSpec.hs
test/Language/Dash/VM/: VMSpec.hs
test/Language/Spot/: LexerSpec.hs  ParserSpec.hs
test/Language/Spot/CodeGen/: NormalizationSpec.hs
test/Language/Spot/Integration/: IntegrationSpec.hs  IntegrationTest.hs
test/Language/Spot/Normalization/: NormalizationSpec.hs
test/Language/Spot/Parser/: LexerSpec.hs  ParserSpec.hs
test/Language/Spot/VM/: VMSpec.hs
tools/: dash.vim
vm/: defs.c  defs.h  encoding.h  gc.c  gc.h  heap.c  heap.h  io.c  io.h  main.c  makefile  opcodes.h  vm.c  vm.h  vm_internal.h  vm_tags.h
vm/spec/: spec_main.c  vm_equality_spec.c  vm_equality_spec.h  vm_spec.c  vm_spec.h
