name:                 spot
version:              0.1.0.0
synopsis:             A dynamically typed, purely functional programming language
-- description:
license:              MIT
license-file:         LICENSE
author:               Arne Schroppe
maintainer:           arne.schroppe@gmx.de
-- copyright:
category:             Language
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-tools:        alex, happy
  exposed-modules:    Language.Spot.Parser.Lexer
                    , Language.Spot.Parser.Parser
                    , Language.Spot.CodeGen.CodeGen
                    , Language.Spot.CodeGen.CodeGenState
                    , Language.Spot.Normalization.Normalization
                    , Language.Spot.Normalization.NormalizationState
                    , Language.Spot.IR.Ast
                    , Language.Spot.IR.Tac
                    , Language.Spot.IR.Data
                    , Language.Spot.IR.Norm
                    , Language.Spot.Asm.Assembler
                    , Language.Spot.Asm.DataAssembler
                    , Language.Spot.VM.VM
                    , Language.Spot.VM.Bits
                    , Language.Spot.VM.Types
                    , Language.Spot.API
  build-depends:      base
                    , array
                    , containers
                    , mtl
  include-dirs:       vm
  c-sources:          vm/vm.c
                    , vm/heap.c

executable spot
  main-is:            Main.hs
  build-depends:      spot >=0.1
                    , base
                    , array
                    , containers
                    , mtl
  hs-source-dirs:     interpret-src
  default-language:   Haskell2010

test-suite test-spot
  type:               exitcode-stdio-1.0
  main-is:            SpecMain.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  build-tools:        alex, happy
  build-depends:      spot >=0.1
                    , base
                    , hspec
                    , hspec-core
                    , containers
                    , QuickCheck


